--- a/Javascript 쇼핑몰 미니게임 과제/shoppingmall.html
+++ b/Javascript 쇼핑몰 미니게임 과제/shoppingmall.html
@@ -8,20 +8,74 @@
   </head>
   <body>
     <img src="./img/logo.png" alt="Logo" class="logo" />
-    <button class="btn">
-      <img src="./img/blue_t.png" alt="t-shirt" class="imgBtn" />
-    </button>
-    <button class="btn">
-      <img src="./img/blue_p.png" alt="pants" class="imgBtn" />
-    </button>
-    <button class="btn">
-      <img src="./img/blue_s.png" alt="skirt" class="imgBtn" />
-    </button>
-    <button class="btn colorBtn blue">Blue</button>
-    <button class="btn colorBtn yellow">Yellow</button>
-    <button class="btn colorBtn pink">Pink</button>
+    <div class="buttons">
+      <button class="btn">
+        <img src="./img/blue_t.png" alt="t-shirt" class="imgBtn" />
+      </button>
+      <button class="btn">
+        <img src="./img/blue_p.png" alt="pants" class="imgBtn" />
+      </button>
+      <button class="btn">
+        <img src="./img/blue_s.png" alt="skirt" class="imgBtn" />
+      </button>
+      <button class="btn colorBtn blue">Blue</button>
+      <button class="btn colorBtn yellow">Yellow</button>
+      <button class="btn colorBtn pink">Pink</button>
+    </div>
 
-    <ul class="items">
+    <ul class="items" style="list-style: none">
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
+      <li class="item">
+        <img src="img/blue_t.png" class="item_thumbnail" />
+        <span class="item_description">mail, large</span>
+      </li>
       <li class="item">
         <img src="img/blue_t.png" class="item_thumbnail" />
         <span class="item_description">mail, large</span>
