--- a/Javascript 쇼핑몰 미니게임 과제/shoppingmall.html
+++ b/Javascript 쇼핑몰 미니게임 과제/shoppingmall.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Shopping</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
   </head>
   <body>
     <img src="./img/logo.png" alt="Logo" class="logo" />
     <div class="buttons">
       <button class="btn">
-        <img src="./img/blue_t.png" alt="t-shirt" class="imgBtn" />
+        <img src="./img/blue_t.png" alt="tshirt" class="imgBtn" />
       </button>
       <button class="btn">
         <img src="./img/blue_p.png" alt="pants" class="imgBtn" />
