--- a/Ajax 선행 강의/fetch.html
+++ b/Ajax 선행 강의/fetch.html
@@ -5,10 +5,20 @@
     <input
       type="button"
       value="fetch"
-      onclick="fetch('html').then(function(response){
+      onclick="
+      /*
+        fetch('html').then(function(response){
         response.text().then(function(text)
         {document.querySelector('article').innerHTML = text;
-        })})"
+        })}) */
+        //Asynchronous
+        function callbackme(){
+            console.log('response end');
+        }
+        fetch('html').then(callbackme);
+        console.log(1);
+        console.log(2);
+        "
     />
   </body>
 </html>
