fetch API - response 객체

--- a/Ajax 선행 강의/fetch.html
+++ b/Ajax 선행 강의/fetch.html
@@ -12,10 +12,12 @@
         {document.querySelector('article').innerHTML = text;
         })}) */
         //Asynchronous
-        function callbackme(){
-            console.log('response end');
-        }
-        fetch('html').then(callbackme);
+        fetch('javascripto').then(function(response){
+            console.log(response.status);
+            if (response.status == '404'){
+                alert('Not found')
+            }
+        });
         console.log(1);
         console.log(2);
         "
