--- a/Ajax 선행 강의/index.html
+++ b/Ajax 선행 강의/index.html
@@ -18,33 +18,24 @@
     />
     <ol>
       <li>
-        <a
-          onclick="fetch('html').then(function(response){
-      response.text().then(function(text)
-      {document.querySelector('article').innerHTML = text;
-      })})"
-          >HTML</a
-        >
+        <a onclick="fetchPage('html')">HTML</a>
       </li>
       <li>
-        <a
-          onclick="fetch('CSS').then(function(response){
-        response.text().then(function(text)
-        {document.querySelector('article').innerHTML = text;
-        })})"
-          >CSS</a
-        >
+        <a onclick="fetchPage('CSS')">CSS</a>
       </li>
       <li>
-        <a
-          onclick="fetch('javascript').then(function(response){
-        response.text().then(function(text)
-        {document.querySelector('article').innerHTML = text;
-        })})"
-          >JavaScript</a
-        >
+        <a onclick="fetchPage('javascript')">JavaScript</a>
       </li>
     </ol>
     <article></article>
+    <script>
+      function fetchPage(name) {
+        fetch(name).then(function (response) {
+          response.text().then(function (text) {
+            document.querySelector("article").innerHTML = text;
+          });
+        });
+      }
+    </script>
   </body>
 </html>
