--- a/Ajax 선행 강의/index.html
+++ b/Ajax 선행 강의/index.html
@@ -7,7 +7,7 @@
     <script src="colors.js"></script>
   </head>
   <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="#welcome">WEB</a></h1>
     <input
       id="night_day"
       type="button"
@@ -18,13 +18,13 @@
     />
     <ol>
       <li>
-        <a onclick="fetchPage('html')">HTML</a>
+        <a href="#!html" onclick="fetchPage('html')">HTML</a>
       </li>
       <li>
-        <a onclick="fetchPage('CSS')">CSS</a>
+        <a href="#!css" onclick="fetchPage('CSS')">CSS</a>
       </li>
       <li>
-        <a onclick="fetchPage('javascript')">JavaScript</a>
+        <a href="#!javascript" onclick="fetchPage('javascript')">JavaScript</a>
       </li>
     </ol>
     <article></article>
@@ -35,6 +35,11 @@
             document.querySelector("article").innerHTML = text;
           });
         });
+      }
+      if (location.hash) {
+        fetchPage(location.hash.substr(2));
+      } else {
+        fetchPage("welcome");
       }
     </script>
   </body>
